<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:minHeight="200dp">

        <ImageView
            android:id="@+id/current_book_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_blue_grey_800"
            android:contentDescription="@string/current_book" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/current_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hello_world"
                android:textColor="@color/accent_material_dark"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/hello_world" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommended_for_you"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_marginLeft="10dp"/>
    <ListView
        android:id="@+id/recommended_books"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
